src/FLanguageParser.java
// Generated from FLanguage.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, Identifier=2, Integer=3, Real=4, Boolean=5, LPAREN=6, RPAREN=7, 
		QUOTE=8, SETQ=9, FUNC=10, LAMBDA=11, PROG=12, COND=13, WHILE=14, RETURN=15, 
		BREAK=16, HEAD=17, TAIL=18, CONS=19, EQUAL=20, NONEQUAL=21, LESS=22, LESSEQ=23, 
		GREATER=24, GREATEREQ=25, ISINT=26, ISREAL=27, ISBOOL=28, ISNULL=29, ISATOM=30, 
		ISLIST=31, AND=32, OR=33, XOR=34, NOT=35, EVAL=36, COMMA=37, PLUS=38, 
		MINUS=39, MULT=40, DIV=41, MOD=42, NULL=43;
	public static final int
		RULE_program = 0, RULE_element = 1, RULE_atom = 2, RULE_literal = 3, RULE_list = 4, 
		RULE_specialForm = 5, RULE_quote = 6, RULE_setq = 7, RULE_func = 8, RULE_lambda = 9, 
		RULE_prog = 10, RULE_cond = 11, RULE_whileForm = 12, RULE_returnForm = 13, 
		RULE_breakForm = 14, RULE_funcCall = 15, RULE_identifierList = 16, RULE_identifier = 17, 
		RULE_expression = 18, RULE_logicalExpression = 19, RULE_relationalExpression = 20, 
		RULE_additiveExpression = 21, RULE_multiplicativeExpression = 22, RULE_primary = 23, 
		RULE_evalCall = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "element", "atom", "literal", "list", "specialForm", "quote", 
			"setq", "func", "lambda", "prog", "cond", "whileForm", "returnForm", 
			"breakForm", "funcCall", "identifierList", "identifier", "expression", 
			"logicalExpression", "relationalExpression", "additiveExpression", "multiplicativeExpression", 
			"primary", "evalCall"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, "'('", "')'", "'''", "'setq'", "'func'", 
			"'lambda'", "'prog'", "'cond'", "'while'", "'return'", "'break'", "'head'", 
			"'tail'", "'cons'", "'equal'", "'nonequal'", "'less'", "'lesseq'", "'greater'", 
			"'greatereq'", "'isint'", "'isreal'", "'isbool'", "'isnull'", "'isatom'", 
			"'islist'", "'and'", "'or'", "'xor'", "'not'", "'eval'", "','", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "Identifier", "Integer", "Real", "Boolean", "LPAREN", "RPAREN", 
			"QUOTE", "SETQ", "FUNC", "LAMBDA", "PROG", "COND", "WHILE", "RETURN", 
			"BREAK", "HEAD", "TAIL", "CONS", "EQUAL", "NONEQUAL", "LESS", "LESSEQ", 
			"GREATER", "GREATEREQ", "ISINT", "ISREAL", "ISBOOL", "ISNULL", "ISATOM", 
			"ISLIST", "AND", "OR", "XOR", "NOT", "EVAL", "COMMA", "PLUS", "MINUS", 
			"MULT", "DIV", "MOD", "NULL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FLanguageParser.EOF, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(50);
				element();
				}
				}
				setState(53); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8864812629884L) != 0) );
			setState(55);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public SpecialFormContext specialForm() {
			return getRuleContext(SpecialFormContext.class,0);
		}
		public FuncCallContext funcCall() {
			return getRuleContext(FuncCallContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).exitElement(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);
		try {
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				atom();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				literal();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(59);
				list();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(60);
				specialForm();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(61);
				funcCall();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(62);
				expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtomContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(FLanguageParser.Identifier, 0); }
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).enterAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).exitAtom(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_atom);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode Integer() { return getToken(FLanguageParser.Integer, 0); }
		public TerminalNode Real() { return getToken(FLanguageParser.Real, 0); }
		public TerminalNode Boolean() { return getToken(FLanguageParser.Boolean, 0); }
		public TerminalNode NULL() { return getToken(FLanguageParser.NULL, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).exitLiteral(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 8796093022264L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(FLanguageParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(FLanguageParser.RPAREN, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).exitList(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(LPAREN);
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70);
				element();
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8864812629884L) != 0) );
			setState(75);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecialFormContext extends ParserRuleContext {
		public QuoteContext quote() {
			return getRuleContext(QuoteContext.class,0);
		}
		public SetqContext setq() {
			return getRuleContext(SetqContext.class,0);
		}
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public LambdaContext lambda() {
			return getRuleContext(LambdaContext.class,0);
		}
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public WhileFormContext whileForm() {
			return getRuleContext(WhileFormContext.class,0);
		}
		public ReturnFormContext returnForm() {
			return getRuleContext(ReturnFormContext.class,0);
		}
		public BreakFormContext breakForm() {
			return getRuleContext(BreakFormContext.class,0);
		}
		public SpecialFormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specialForm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).enterSpecialForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).exitSpecialForm(this);
		}
	}

	public final SpecialFormContext specialForm() throws RecognitionException {
		SpecialFormContext _localctx = new SpecialFormContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_specialForm);
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUOTE:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				quote();
				}
				break;
			case SETQ:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				setq();
				}
				break;
			case FUNC:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				func();
				}
				break;
			case LAMBDA:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				lambda();
				}
				break;
			case PROG:
				enterOuterAlt(_localctx, 5);
				{
				setState(81);
				prog();
				}
				break;
			case COND:
				enterOuterAlt(_localctx, 6);
				{
				setState(82);
				cond();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 7);
				{
				setState(83);
				whileForm();
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 8);
				{
				setState(84);
				returnForm();
				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 9);
				{
				setState(85);
				breakForm();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuoteContext extends ParserRuleContext {
		public TerminalNode QUOTE() { return getToken(FLanguageParser.QUOTE, 0); }
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public QuoteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quote; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).enterQuote(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).exitQuote(this);
		}
	}

	public final QuoteContext quote() throws RecognitionException {
		QuoteContext _localctx = new QuoteContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_quote);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(QUOTE);
			setState(89);
			element();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SetqContext extends ParserRuleContext {
		public TerminalNode SETQ() { return getToken(FLanguageParser.SETQ, 0); }
		public TerminalNode Identifier() { return getToken(FLanguageParser.Identifier, 0); }
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public SetqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).enterSetq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).exitSetq(this);
		}
	}

	public final SetqContext setq() throws RecognitionException {
		SetqContext _localctx = new SetqContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_setq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(SETQ);
			setState(92);
			match(Identifier);
			setState(93);
			element();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncContext extends ParserRuleContext {
		public TerminalNode FUNC() { return getToken(FLanguageParser.FUNC, 0); }
		public TerminalNode Identifier() { return getToken(FLanguageParser.Identifier, 0); }
		public TerminalNode LPAREN() { return getToken(FLanguageParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(FLanguageParser.RPAREN, 0); }
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).enterFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).exitFunc(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_func);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(FUNC);
			setState(96);
			match(Identifier);
			setState(97);
			match(LPAREN);
			setState(98);
			identifierList();
			setState(99);
			match(RPAREN);
			setState(100);
			element();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LambdaContext extends ParserRuleContext {
		public TerminalNode LAMBDA() { return getToken(FLanguageParser.LAMBDA, 0); }
		public TerminalNode LPAREN() { return getToken(FLanguageParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(FLanguageParser.RPAREN, 0); }
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public LambdaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lambda; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).enterLambda(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).exitLambda(this);
		}
	}

	public final LambdaContext lambda() throws RecognitionException {
		LambdaContext _localctx = new LambdaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_lambda);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(LAMBDA);
			setState(103);
			match(LPAREN);
			setState(104);
			identifierList();
			setState(105);
			match(RPAREN);
			setState(106);
			element();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode PROG() { return getToken(FLanguageParser.PROG, 0); }
		public TerminalNode LPAREN() { return getToken(FLanguageParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public List<TerminalNode> RPAREN() { return getTokens(FLanguageParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(FLanguageParser.RPAREN, i);
		}
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(PROG);
			setState(109);
			match(LPAREN);
			setState(110);
			identifierList();
			setState(111);
			match(RPAREN);
			setState(113); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(112);
				element();
				}
				}
				setState(115); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8864812629884L) != 0) );
			setState(117);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondContext extends ParserRuleContext {
		public TerminalNode COND() { return getToken(FLanguageParser.COND, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).enterCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).exitCond(this);
		}
	}

	public final CondContext cond() throws RecognitionException {
		CondContext _localctx = new CondContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_cond);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(COND);
			setState(120);
			element();
			setState(121);
			element();
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(122);
				element();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileFormContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(FLanguageParser.WHILE, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public WhileFormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileForm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).enterWhileForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).exitWhileForm(this);
		}
	}

	public final WhileFormContext whileForm() throws RecognitionException {
		WhileFormContext _localctx = new WhileFormContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_whileForm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(WHILE);
			setState(126);
			element();
			setState(127);
			element();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnFormContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(FLanguageParser.RETURN, 0); }
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public ReturnFormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnForm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).enterReturnForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).exitReturnForm(this);
		}
	}

	public final ReturnFormContext returnForm() throws RecognitionException {
		ReturnFormContext _localctx = new ReturnFormContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_returnForm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(RETURN);
			setState(130);
			element();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BreakFormContext extends ParserRuleContext {
		public TerminalNode BREAK() { return getToken(FLanguageParser.BREAK, 0); }
		public BreakFormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_breakForm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).enterBreakForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLanguageListener ) ((FLanguageListener)listener).exitBreakForm(this);
		}
	}

	public final BreakFormContext breakForm() throws RecognitionException {
		BreakFormContext _localctx = new BreakFormContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_breakForm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(BREAK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
